# Agent_Officespace

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
applications/: README.md
applications/slack/: README.md
automations/: README.md
automations/cursor/: README.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: README.md
data/examples/: README.md  reasoning_sft_examples.concise.jsonl  reasoning_sft_examples.md  (+2 more)
deploy/: README.md
notebooks/: 01_eda_preflop.ipynb  02_baseline_metrics.ipynb  03_prediction_success_evaluation.ipynb  04_rf_action_and_success_predictors.ipynb  05_unified_benchmark.ipynb  README.md
poker/: .gitignore  PROJECT_SUMMARY.md  README.md  requirements.txt
poker_predictor/: README.md  __init__.py  cli.py
reports/: METRICS_REPORT.md  PROMPT_DB_CANVAS.md  README.md
requirements/: README.md  all.txt  base.txt  dev.txt  llm.txt  reason.txt  torch.txt  tracking.txt
scripts/: README.md  spin_up_prompt_sandbox.sh
tests/: README.md  test_baselines.py  test_board_features.py  test_canonical_label.py  test_ensemble.py  test_features.py  test_opponent_features.py  test_parse_preflop.py  test_postflop_loaders.py  test_prompt_db.py  test_reasoning_labeler.py  test_schema_num_players.py  test_selfplay_cli.py  test_selfplay_engine.py  test_selfplay_hand_eval.py  test_selfplay_players.py  test_selfplay_prompts.py  test_selfplay_reward.py  test_selfplay_runner.py  test_success_predictor.py  test_tune.py
(+109 files in other folders)
